--- a/WhoRobsMyFocus/WhoRobsMyFocus.csproj
+++ b/WhoRobsMyFocus/WhoRobsMyFocus.csproj
@@ -72,6 +72,9 @@
     <Compile Include="SettingsAndLogWindow.Designer.cs">
       <DependentUpon>SettingsAndLogWindow.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="MainWindow.resx">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SettingsAndLogWindow.resx">
       <DependentUpon>SettingsAndLogWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -104,6 +107,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Top.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
